--- a/contactos.html
+++ b/contactos.html
@@ -248,7 +248,7 @@
 
   <main>
     <!-- BOTÓN VOLVER -->
-    <a class="back-home" href="index.html">← Volver a la portada</a>
+    <a class="back-home" href="index.html">Volver a la portada</a>
 
     <section class="card">
       <h2>Contactos</h2>
@@ -273,7 +273,7 @@
   <div id="site-footer"></div>
   <script src="assets/footer.js?v=1"></script>
 
-  <!-- JS CONTACTOS (ajusta la ruta si lo tienes en otro sitio) -->
+  <!-- JS CONTACTOS -->
   <script src="contactos.js"></script>
 </body>
 </html>
