--- a/index.html
+++ b/index.html
@@ -236,53 +236,4 @@
       </article>
 
       <article class="card">
-        <div class="card-header">
-          <img src="img/herramientas.png" alt="icono">
-          <h2>Publicaciones</h2>
-        </div>
-        <img class="card-image" src="img/tarjetas/publicaciones.png" alt="Publicaciones">
-        <p>Acceso a documentos, informes y boletines de la Federación de Enseñanza.</p>
-        <a class="btn" href="publicaciones.html">Abrir herramienta</a>
-      </article>
-
-      <!-- ✅ Calculadoras (plural) -->
-      <article class="card">
-        <div class="card-header">
-          <img src="img/herramientas.png" alt="icono">
-          <h2>Calculadoras</h2>
-        </div>
-        <img class="card-image" src="img/tarjetas/calculadora.png" alt="Calculadoras">
-        <p>Baremos, traslados, retribuciones, jubilación y más.</p>
-        <a class="btn" href="./calculadoras/">Abrir herramienta</a>
-      </article>
-
-      <article class="card">
-        <div class="card-header">
-          <img src="img/herramientas.png" alt="icono">
-          <h2>Contactos</h2>
-        </div>
-        <img class="card-image" src="img/tarjetas/contactos.png" alt="Contactos">
-        <p>Contactos de la Federación, delegados/as de zona y asesoría jurídica.</p>
-        <a class="btn" href="contactos.html">Abrir herramienta</a>
-      </article>
-
-      <article class="card">
-        <div class="card-header">
-          <img src="img/herramientas.png" alt="icono">
-          <h2>Afiliación</h2>
-        </div>
-        <img class="card-image" src="img/tarjetas/afiliacion.png" alt="Afiliación">
-        <p>Información para afiliarse a FECCOOEx y ventajas para la afiliación.</p>
-        <a class="btn" href="afiliacion.html">Abrir herramienta</a>
-      </article>
-
-    </div>
-  </main>
-
-  <!-- FOOTER CENTRAL -->
-  <div id="site-footer"></div>
-  <!-- cache-bust para evitar footer.js viejo en navegador -->
-  <script src="assets/footer.js?v=1"></script>
-
-</body>
-</html>
+        <div class="card-h
