--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
     </div>
     <nav>
       <a href="delegados.html">Área delegados/as</a>
+      <a href="#" style="margin-left:8px;">Área afiliados/as</a>
     </nav>
   </header>
 
@@ -284,3 +285,4 @@
 
 </body>
 </html>
+
