--- a/index.html
+++ b/index.html
@@ -11,149 +11,258 @@
   <style>
     * { box-sizing: border-box; }
 
-    body {
-      margin: 0;
+    body{
+      margin:0;
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #f3f4f6;
-      color: #222;
+      background:#f3f4f6;
+      color:#222;
     }
 
     /* HEADER */
-    header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 14px 24px;
-      background: #d60000;
-      color: #fff;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.25);
-      position: sticky;
-      top: 0;
-      z-index: 10;
+    header{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      padding:14px 24px;
+      background:#d60000;
+      color:#fff;
+      box-shadow:0 2px 6px rgba(0,0,0,0.25);
+      position:sticky;
+      top:0;
+      z-index:10;
+    }
+    header img{ height:52px; }
+
+    .titles h1{
+      margin:0;
+      font-size:1.6rem;
+      font-weight:700;
+    }
+    .titles p{
+      margin:2px 0 0;
+      font-size:0.9rem;
+      opacity:0.95;
     }
 
-    header img { height: 52px; }
-
-    .titles h1 {
-      margin: 0;
-      font-size: 1.6rem;
-      font-weight: 700;
+    nav a{
+      color:white;
+      text-decoration:none;
+      font-weight:600;
+      padding:6px 12px;
+      border:1px solid rgba(255,255,255,0.7);
+      border-radius:999px;
+      transition:0.2s ease;
+    }
+    nav a:hover{
+      background:rgba(255,255,255,0.18);
+      transform:translateY(-1px);
+      box-shadow:0 2px 6px rgba(0,0,0,0.25);
     }
 
-    .titles p {
-      margin: 2px 0 0;
-      font-size: 0.9rem;
-      opacity: 0.95;
+    /* RESPONSIVE HEADER */
+    @media (max-width:700px){
+      header{ padding:12px 14px; }
+      header img{ height:46px; }
+      .titles h1{ font-size:1.25rem; }
+      .titles p{ font-size:0.85rem; }
     }
 
-    nav a {
-      color: white;
-      text-decoration: none;
-      font-weight: 600;
-      padding: 6px 12px;
-      border: 1px solid rgba(255,255,255,0.7);
-      border-radius: 999px;
-      transition: 0.2s ease;
+    /* ===== CARRUSEL ===== */
+    .campaign-wrap{
+      max-width:1300px;
+      margin:14px auto 0;
+      padding:0 16px;
     }
 
-    nav a:hover {
-      background: rgba(255,255,255,0.18);
-      transform: translateY(-1px);
-      box-shadow: 0 2px 6px rgba(0,0,0,0.25);
+    .carousel{
+      background:#fff;
+      border:1px solid #e1e4ea;
+      border-radius:12px;
+      box-shadow:0 3px 8px rgba(0,0,0,0.08);
+      overflow:hidden;
+      position:relative;
     }
 
-    /* MAIN */
-    main {
-      max-width: 1300px;
-      margin: 26px auto 40px;
-      padding: 0 16px 40px;
+    .carousel-track{
+      display:flex;
+      transition:transform 350ms ease;
+      will-change: transform;
     }
 
-    /* GRID */
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(5, minmax(0, 1fr));
-      gap: 18px;
+    .slide{
+      min-width:100%;
+      position:relative;
+      background:#fff;
     }
 
-    @media (max-width: 1100px) {
-      .grid { grid-template-columns: repeat(3, 1fr); }
+    .slide a{
+      display:block;
+      text-decoration:none;
+      color:inherit;
     }
 
-    @media (max-width: 700px) {
-      .grid { grid-template-columns: repeat(2, 1fr); }
+    .slide img{
+      display:block;
+      width:100%;
+      height:auto;
+      object-fit:contain; /* NO recorta */
+      max-height:260px;   /* desktop */
+      background:#fff;
     }
 
-    @media (max-width: 500px) {
-      .grid { grid-template-columns: 1fr; }
+    @media (max-width:700px){
+      .slide img{ max-height:180px; } /* móvil */
     }
 
-    /* TARJETAS */
-    .card {
-      background: #fff;
-      border-radius: 10px;
-      padding: 12px;
-      border: 1px solid #e1e4ea;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.10);
+    /* Flechas */
+    .carousel-btn{
+      position:absolute;
+      top:50%;
+      transform:translateY(-50%);
+      border:none;
+      background:rgba(0,0,0,0.35);
+      color:#fff;
+      width:40px;
+      height:40px;
+      border-radius:999px;
+      cursor:pointer;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      transition:background 120ms ease, transform 120ms ease;
+      z-index:2;
+    }
+    .carousel-btn:hover{
+      background:rgba(0,0,0,0.5);
+      transform:translateY(-50%) scale(1.03);
+    }
+    .carousel-btn.prev{ left:10px; }
+    .carousel-btn.next{ right:10px; }
+
+    @media (max-width:700px){
+      .carousel-btn{ width:36px; height:36px; }
+      .carousel-btn.prev{ left:8px; }
+      .carousel-btn.next{ right:8px; }
+    }
+
+    /* Puntos */
+    .dots{
+      position:absolute;
+      left:0;
+      right:0;
+      bottom:10px;
+      display:flex;
+      justify-content:center;
+      gap:8px;
+      z-index:2;
+      padding:0 10px;
+    }
+    .dot{
+      width:10px;
+      height:10px;
+      border-radius:999px;
+      border:1px solid rgba(255,255,255,0.9);
+      background:rgba(0,0,0,0.35);
+      cursor:pointer;
+      transition:transform 120ms ease, background 120ms ease;
+    }
+    .dot.active{
+      background:#d60000;
+      border-color:rgba(255,255,255,0.95);
+      transform:scale(1.12);
+    }
+
+    /* Mensaje si no hay banners */
+    .carousel-empty{
+      padding:14px 16px;
+      color:#555;
+      font-size:0.95rem;
+    }
+
+    /* ===== MAIN ===== */
+    main{
+      max-width:1300px;
+      margin:14px auto 40px;
+      padding:0 16px 40px;
+    }
+
+    .grid{
+      display:grid;
+      grid-template-columns:repeat(5, minmax(0,1fr));
+      gap:18px;
+    }
+
+    @media (max-width:1100px){
+      .grid{ grid-template-columns:repeat(3,1fr); }
+    }
+    @media (max-width:700px){
+      .grid{ grid-template-columns:repeat(2,1fr); }
+    }
+    @media (max-width:500px){
+      .grid{ grid-template-columns:1fr; }
+    }
+
+    .card{
+      background:#fff;
+      border-radius:10px;
+      padding:12px;
+      border:1px solid #e1e4ea;
+      box-shadow:0 3px 8px rgba(0,0,0,0.10);
       transition: transform .15s ease, box-shadow .15s ease, border-color .15s ease;
-      display: flex;
-      flex-direction: column;
+      display:flex;
+      flex-direction:column;
+    }
+    .card:hover{
+      transform:translateY(-2px);
+      box-shadow:0 6px 14px rgba(0,0,0,0.18);
+      border-color:#d60000;
     }
 
-    .card:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 6px 14px rgba(0,0,0,0.18);
-      border-color: #d60000;
+    .card-header{
+      display:flex;
+      align-items:center;
+      gap:8px;
+    }
+    .card-header img{ height:24px; }
+    .card-header h2{
+      font-size:1.0rem;
+      margin:0;
+      color:#d60000;
     }
 
-    .card-header {
-      display: flex;
-      align-items: center;
-      gap: 8px;
+    .card-image{
+      width:100%;
+      border-radius:6px;
+      margin:6px 0;
+      max-height:80px;
+      object-fit:contain;
     }
 
-    .card-header img { height: 24px; }
-
-    .card-header h2 {
-      font-size: 1.0rem;
-      margin: 0;
-      color: #d60000;
+    .card p{
+      flex-grow:1;
+      font-size:0.88rem;
+      color:#444;
+      margin:0 0 2px;
     }
 
-    .card-image {
-      width: 100%;
-      border-radius: 6px;
-      margin: 6px 0;
-      max-height: 80px;
-      object-fit: contain;
-    }
-
-    .card p {
-      flex-grow: 1;
-      font-size: 0.88rem;
-      color: #444;
-      margin: 0 0 2px;
-    }
-
-    .btn {
-      display: inline-block;
-      margin-top: 6px;
-      padding: 7px 9px;
-      text-align: center;
-      border-radius: 6px;
-      font-size: 0.88rem;
-      font-weight: 600;
-      background: #d60000;
-      color: #fff;
-      text-decoration: none;
+    .btn{
+      display:inline-block;
+      margin-top:6px;
+      padding:7px 9px;
+      text-align:center;
+      border-radius:6px;
+      font-size:0.88rem;
+      font-weight:600;
+      background:#d60000;
+      color:#fff;
+      text-decoration:none;
       transition: background 0.15s, transform 0.12s ease, box-shadow 0.12s ease;
-      box-shadow: 0 2px 5px rgba(214,0,0,0.3);
+      box-shadow:0 2px 5px rgba(214,0,0,0.3);
     }
-
-    .btn:hover {
-      background: #b40000;
-      transform: translateY(-1px);
-      box-shadow: 0 4px 9px rgba(180,0,0,0.35);
+    .btn:hover{
+      background:#b40000;
+      transform:translateY(-1px);
+      box-shadow:0 4px 9px rgba(180,0,0,0.35);
     }
   </style>
 </head>
@@ -169,9 +278,19 @@
     </div>
     <nav>
       <a href="delegados.html">Área delegados/as</a>
-      <a href="#" style="margin-left:8px;">Área afiliados/as</a>
     </nav>
   </header>
+
+  <!-- CARRUSEL DE CAMPAÑAS (se alimenta desde banners.csv) -->
+  <div class="campaign-wrap">
+    <div class="carousel" id="campaignCarousel" aria-label="Campañas">
+      <div class="carousel-empty" id="carouselEmpty">Cargando campañas…</div>
+      <button class="carousel-btn prev" id="carouselPrev" aria-label="Anterior" style="display:none;">‹</button>
+      <button class="carousel-btn next" id="carouselNext" aria-label="Siguiente" style="display:none;">›</button>
+      <div class="carousel-track" id="carouselTrack" style="display:none;"></div>
+      <div class="dots" id="carouselDots" style="display:none;"></div>
+    </div>
+  </div>
 
   <main>
     <div class="grid">
@@ -283,6 +402,178 @@
   <div id="site-footer"></div>
   <script src="assets/footer.js?v=1"></script>
 
+  <script>
+    // ===== Carrusel basado en banners.csv (en la raíz) =====
+    const BANNERS_CSV = "banners.csv";
+
+    const elEmpty = document.getElementById("carouselEmpty");
+    const elTrack = document.getElementById("carouselTrack");
+    const elDots  = document.getElementById("carouselDots");
+    const btnPrev = document.getElementById("carouselPrev");
+    const btnNext = document.getElementById("carouselNext");
+    const elCarousel = document.getElementById("campaignCarousel");
+
+    let slides = [];
+    let index = 0;
+    let timer = null;
+    const AUTO_MS = 5500;
+
+    // CSV con comillas (simple y suficiente para nuestros campos)
+    function parseCSV(text){
+      const lines = text.replace(/\r/g, "").split("\n").filter(l => l.trim() !== "");
+      if (!lines.length) return [];
+      const headers = splitCSVLine(lines[0]).map(h => h.trim());
+      return lines.slice(1).map(line => {
+        const cols = splitCSVLine(line);
+        const obj = {};
+        headers.forEach((h,i) => obj[h] = (cols[i] ?? "").trim());
+        return obj;
+      });
+    }
+
+    function splitCSVLine(line){
+      const out = [];
+      let cur = "";
+      let inQ = false;
+      for (let i=0; i<line.length; i++){
+        const ch = line[i];
+        if (ch === '"' && line[i+1] === '"'){ cur += '"'; i++; continue; }
+        if (ch === '"'){ inQ = !inQ; continue; }
+        if (ch === "," && !inQ){ out.push(cur); cur=""; continue; }
+        cur += ch;
+      }
+      out.push(cur);
+      return out;
+    }
+
+    function normBool(v){
+      return ["1","true","si","sí","x","ok"].includes((v||"").toLowerCase().trim());
+    }
+
+    function buildCarousel(items){
+      slides = items;
+
+      // Limpiar
+      elTrack.innerHTML = "";
+      elDots.innerHTML = "";
+
+      slides.forEach((s, i) => {
+        const slide = document.createElement("div");
+        slide.className = "slide";
+
+        const imgSrc = s.imagen;
+        const alt = s.alt || "Campaña FECCOOEx";
+        const href = (s.enlace || "").trim();
+
+        const img = `<img src="${imgSrc}" alt="${alt}" loading="lazy">`;
+
+        slide.innerHTML = href
+          ? `<a href="${href}" aria-label="${alt}">${img}</a>`
+          : img;
+
+        elTrack.appendChild(slide);
+
+        const dot = document.createElement("button");
+        dot.className = "dot" + (i === 0 ? " active" : "");
+        dot.setAttribute("aria-label", "Ir a campaña " + (i+1));
+        dot.addEventListener("click", () => goTo(i, true));
+        elDots.appendChild(dot);
+      });
+
+      // Mostrar controles si hay más de 1
+      const multi = slides.length > 1;
+      elEmpty.style.display = "none";
+      elTrack.style.display = "flex";
+      elDots.style.display = multi ? "flex" : "none";
+      btnPrev.style.display = multi ? "flex" : "none";
+      btnNext.style.display = multi ? "flex" : "none";
+
+      index = 0;
+      apply();
+
+      if (multi) startAuto();
+    }
+
+    function apply(){
+      elTrack.style.transform = `translateX(${-index * 100}%)`;
+      [...elDots.children].forEach((d, i) => d.classList.toggle("active", i === index));
+    }
+
+    function goTo(i, userAction=false){
+      index = (i + slides.length) % slides.length;
+      apply();
+      if (userAction) restartAuto();
+    }
+
+    function next(user=false){ goTo(index + 1, user); }
+    function prev(user=false){ goTo(index - 1, user); }
+
+    function startAuto(){
+      stopAuto();
+      timer = setInterval(() => next(false), AUTO_MS);
+    }
+    function stopAuto(){
+      if (timer) { clearInterval(timer); timer = null; }
+    }
+    function restartAuto(){
+      stopAuto();
+      startAuto();
+    }
+
+    // Pausar al hover (PC)
+    elCarousel.addEventListener("mouseenter", stopAuto);
+    elCarousel.addEventListener("mouseleave", () => { if (slides.length > 1) startAuto(); });
+
+    // Flechas
+    btnNext.addEventListener("click", () => next(true));
+    btnPrev.addEventListener("click", () => prev(true));
+
+    // Swipe en móvil
+    let touchX = null;
+    elCarousel.addEventListener("touchstart", (e) => {
+      if (!e.touches || e.touches.length !== 1) return;
+      touchX = e.touches[0].clientX;
+      stopAuto();
+    }, {passive:true});
+
+    elCarousel.addEventListener("touchend", (e) => {
+      if (touchX === null) return;
+      const endX = (e.changedTouches && e.changedTouches[0]) ? e.changedTouches[0].clientX : touchX;
+      const dx = endX - touchX;
+      touchX = null;
+
+      if (Math.abs(dx) > 40){
+        dx < 0 ? next(true) : prev(true);
+      } else {
+        restartAuto();
+      }
+    }, {passive:true});
+
+    // Cargar CSV
+    fetch(BANNERS_CSV + "?v=" + Date.now())
+      .then(r => {
+        if (!r.ok) throw new Error("No se pudo cargar banners.csv");
+        return r.text();
+      })
+      .then(text => {
+        const rows = parseCSV(text);
+
+        // Filtrar activos + ordenar
+        const items = rows
+          .filter(r => normBool(r.activo))
+          .sort((a,b) => (parseInt(a.orden||"999",10) - parseInt(b.orden||"999",10)));
+
+        if (!items.length){
+          elEmpty.textContent = "No hay campañas activas.";
+          return;
+        }
+
+        buildCarousel(items);
+      })
+      .catch(err => {
+        console.error(err);
+        elEmpty.textContent = "No se ha podido cargar el banner de campañas.";
+      });
+  </script>
 </body>
 </html>
-
